--- a/rust_core/Cargo.toml
+++ b/rust_core/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-polars       = { version = "0.44.2", features = ["lazy", "temporal", "dtype-datetime"] }
+polars       = { version = "0.44.2", features = ["lazy", "temporal", "dtype-datetime", "csv"] }
 pyo3-polars  = { version = "0.18.0", default-features = false, features = ["lazy"] }
 pyo3         = { version = "0.21.2", features = ["extension-module", "abi3-py38"] }
 
@@ -17,3 +17,4 @@ serde_json   = "1"
 anyhow       = "1"
 thiserror    = "1"
 rayon        = "1"
+csv          = "1.3"
